# app/response/res_base.go
@@ -1,0 +1,9 @@
+package response
+
+type PaginationResponse struct {
+	ResponseKey     string `json:"response_key"`
+	ResponseMessage string `json:"response_message"`
+	TotalPage       int    `json:"totalPage"`
+	Page            int    `json:"page"`
+	PageSize        int    `json:"pageSize"`
+}
